[project]
name = "tutorial-lightning"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "lightning[extra]>=2.5.1.post0",
    "litmodels>=0.1.8",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "torchvision>=0.22.1",
]
